added jquery script

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,3 +6,13 @@
     </li>
     {{/each}}
 </ul>
+
+<h1>Add Burger</h1>
+<form method="POST" action="/create">
+<textarea type="text" name="burger"></textarea>
+<button type="button" class="btn btn-primary" id="submit-button">Submit</button>
+
+</form>
+<ul>
+
+</ul>
