--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
             <ul id="burger-list">
                 {{#each burgers}}
                 <li>
-                    <p>{{this.id}}.{{this.name}}</p>
+                    <p>{{this.burger_name}}</p>
                 </li>
                 {{/each}}
             </ul>
@@ -23,7 +23,7 @@
                 <div class="input-group input-group-sm mb-3">
                     <div class="input-group-prepend">
                     </div>
-                    <input type="text" class="form-control" aria-label="Sizing example input"
+                    <input type="text" name="burger-input"class="form-control" aria-label="Sizing example input"
                         aria-describedby="inputGroup-sizing-sm">
                 </div>
                 <button type="button" class="btn btn-primary" id="submit-button">Submit</button>
