--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,58 +5,45 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm">
+        <div class="col-sm" id="burgers-list">
 
             <h3>Burger List</h3>
-            <ul id="burger-list">
+            
+                 <ul>
                 {{#each burgers}}
-                <li>
-                    <p>{{this.burger_name}}</p>
-                </li>
+                {{#unless devoured}}
+                {{> burgers/burger-block}}
+                {{/unless}}
                 {{/each}}
+               
             </ul>
         </div>
 
-        <div class="col-sm">
+        <div class="col-sm"  class="form-group">
             <h3>Add a sandwhich</h3>
-            <form id="add-burger">
-                <div class="input-group input-group-sm mb-3">
+            <form id="add-burger" method= "POST" action="/api/burger" class="create-form">
+                <div class="input-group input-group-sm mb-3"  >
                     <div class="input-group-prepend">
                     </div>
-                    <input type="text" id="burger-input" name="burger" class="form-control" aria-label="Sizing example input"
-                        aria-describedby="inputGroup-sizing-sm">
-                </div>
+                    <input type="text" id="burger-input" name="burger_name" class="form-control"
+                        aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                </div> 
                 <button type="submit" class="btn btn-primary" id="submit-button">Submit</button>
             </form>
         </div>
 
         <div class="col-sm">
-
+            <div id="devoured-list">
+                <ul>
+                    {{#each burgers}}
+                    {{#if devoured}}
+                    {{> burgers/burger-block2}}
+                    {{/if}}
+                    {{/each}}
+                </ul>
+            </div>
         </div>
 
     </div>
 </div>
 
-<script type="text/javascript">
-
-
-$("#add-burger").on("submit", function(event) {
-    event.preventDefault();
-
-    let newburger = {
-      burger: $("#add-burger[name=burger]").val
-    };
- $.ajax("/create", {
-      type: "POST",
-      data: newburger
-    }).then(
-      function() {
-        console.log("added new burger");
-        // Reload the page to get the updated list
-        location.reload();
-      }
-    );
-  });
-
-</script>
-  
