--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
                  <ul>
                 {{#each burgers}}
                 {{#unless devoured}}
-                {{> burgers/burger-block}}
+                {{> burgers/burger-block devoured=false}}
                 {{/unless}}
                 {{/each}}
                
@@ -37,7 +37,7 @@
                 <ul>
                     {{#each burgers}}
                     {{#if devoured}}
-                    {{> burgers/burger-block}}
+                    {{> burgers/burger-block devoured=true}}
                     {{/if}}
                     {{/each}}
                 </ul>
