--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,20 +1,11 @@
-<li>
-	{{#if devoured}}
-	
-	{{id}}.
-	{{burger_name}}
-
-	{{else}}
-
-	{{id}}.
-	{{burger_name}}
-
-	<button class="change-devour" data-id="{{id}}" data-newdevour="true">
-	
-		DEVOUR
-	</button>
-
-	{{/if}}
-
-
-</li>
+<div class="burger-div">
+	<div class="row">
+		<div class="col-md-7 col-7">
+			{{burger_name}}
+		</div>
+		<div class="col-md-3 col-3">
+			<button class="change-devour btn btn-outline-secondary rounded-0" data-id="{{id}}" data-newdevour="{{devoured}}">
+				{{#if devoured}}Devour It!{{else}}Reorder it!{{/if}}
+			</button>
+		</div>
+	</div>
